--- a/src/app/private-inner-project/private-inner-project.component.scss
+++ b/src/app/private-inner-project/private-inner-project.component.scss
@@ -309,8 +309,8 @@
 
           .media-image {
             width: 100%;
-            height: 150px;
-            object-fit: cover;
+            max-height: 300px;
+            object-fit: contain;
             transition: transform 0.2s ease;
 
             &:hover {
@@ -321,7 +321,7 @@
           .video-thumbnail {
             position: relative;
             width: 100%;
-            height: 150px;
+            max-height: 300px;
             overflow: hidden;
 
             .media-video {
@@ -351,6 +351,8 @@
             --padding-end: 0;
             --width: 32px;
             --height: 32px;
+            z-index: 10;
+            margin: 0;
           }
         }
 
